Backend/OmegaSpring/manifests/ExternalName.yaml
apiVersion: v1
kind: Service
metadata:
  name: external
  namespace: default
spec:
  type: ExternalName
  externalName: omega.backend.com
