Backend/OmegaSpring/manifests/LoadBalancerService.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: v1
kind: Service
metadata:
  name: backend-deployment
  namespace: default
  selfLink: /api/v1/namespaces/default/services/backend-deployment
  uid: c1c3943d-38eb-4adf-858f-63b2655fc478
spec:
  externalTrafficPolicy: Cluster
  ports:
    - nodePort: 32004
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    component: omega-backend
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
