Backend/OmegaSpring/manifests/backend-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: omega-backend
  ports:
   - port: 5000
     targetPort: 5000
